# make-aggrid

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml
changelog/: +aea49a34.doc.md  _template.j2
make_aggrid/: __init__.py
