[project]
name = "make-aggrid"
version = "0.1.0"
description = "Facilita a configuração do AgGrid com DataFrames no Streamlit"
authors = [
    {name = "edwdev",email = "edjdevel@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit-aggrid (>=1.1.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "make-aggrid"
version = "0.1.0"
description = "Configura automaticamente o AgGrid no Streamlit com base em um DataFrame"
authors = [
    {name = "edwdev",email = "edjdevel@gmail.com"}
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/seuusuario/make-aggrid"
repository = "https://github.com/seuusuario/make-aggrid"
keywords = ["streamlit", "aggrid", "pandas", "dataframe"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3"
streamlit = "^1.0"
st-aggrid = "^0.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
